array.island.Island.scala.error
Compilation error:
Island:6: error: not found: value len
  for (i<-1 to len(num)-1){
               ^