array.island.Island.scala.code
var c1 = 0
var c2 = 0

def island(num:Array[Int]): Int = {
  for (i<-1 to len(num)-1){
    if(num(i)>0){
      c2=c2 + 1 
    }
    if (num(i)==0){
      if (c2>c1){
      	c1=c2
      }
      c2 = 0
    }
  }
  return c1
}